--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: full stack webdeveloper nanodegree 2 
+  uni: udacity 2
+  year: June, 2014 &mdash; Jan, 2015
   # awards:
-  # summary:
+  summary: Edu
